# accurate_battery

./: CMakeLists.txt  README.md  accurate_battery.c  accurate_battery_no_trickle.c
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: CRLF-to-LF.yml  c-cpp.yml  cmake.yml  releases.yml  sync-gitee.yml
module/: customize.sh  install.sh  module.prop  uninstall.sh
module/common/: service.sh
modules/accurate_battery_no_trickle/: customize.sh  module.prop
modules/accurate_battery_no_trickle/common/: service.sh
update_channel/: accurate_battery.json  changelog.md
